Solving some questions of Composition

--- a/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
@@ -5699,6 +5699,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Ans:*\n",
+    "\n",
+    "**Composition** is a core principle in Python's object-oriented programming paradigm. It involves creating relationships between classes, where one class contains another as a part. This allows you to build complex objects by combining simpler ones.\n",
+    "\n",
+    "Key points about composition:\n",
+    "\n",
+    "**Combining Objects**: Composition involves creating instances of one class within another class. These instances become attributes of the containing class, providing specific functionality.\n",
+    "\n",
+    "**Has-a Relationship**: Composition establishes a \"has-a\" relationship between classes. For example, a Car \"has-a\" Engine\", meaning the Carclass contains an instance of theEngine` class.\n",
+    "\n",
+    "**Flexibility and Encapsulation**: Composition offers flexibility and encapsulation. It allows you to change behavior by replacing components. It also hides the internal workings of components.\n",
+    "\n",
+    "**Code Reusability**: Composition promotes code reusability by allowing you to reuse existing classes as components in different contexts.\n",
+    "\n",
+    "**Avoiding Tight Coupling**: Composition helps avoid tight coupling between classes. Changes in one class's implementation do not directly affect the containing class.\n",
+    "\n",
+    "**Granular Control**: With composition, you have fine-grained control over how components are used and interact.\n",
+    "\n",
+    "**Dynamism and Runtime Behavior**: Composition allows for dynamic composition at runtime. You can change components of an object during program execution, leading to adaptable behavior."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2. Describe the difference between composition and inheritance in object-oriented programming."
    ]
   },
@@ -5706,7 +5731,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "|       | Composition | Inheritance |\n",
+    "| ----- | ----------- | ----------- |\n",
+    "| **Definition** | Composition is a design principle where one class contains an instance of another class as a member or attribute. | Inheritance is a mechanism where one class (subclass) derives properties and behaviors from another class (superclass or base class). |\n",
+    "| **Relationship** | It is a `\"has-a\"` relationship. | It is an `\"is-a\"` relationship. |\n",
+    "| **Flexibility** | Composition provides greater flexibility. You can change the behavior of a class by replacing its components with different ones at runtime. | Inheritance provides lessor flexibility as inherited attributes and methods get impacted with changes in base classes etc |\n",
+    "| **Code Reusability** | Composition promotes code reusability by allowing you to reuse existing classes as components in different contexts. | Inheritance promotes code reusability by allowing a subclass to inherit attributes and methods from its superclass.|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3. Create a Python class called `Author` with attributes for name and birthdate. Then, create a `Book` class that contains an instance of `Author` as a composition. Provide an example of creating a `Book` object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title: Harry Potter and the Philosopher's Stone\n",
+      "Author: J.K. Rowling\n",
+      "Genre: Fantasy\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Author:\n",
+    "    def __init__(self, name, birthdate):\n",
+    "        self.name = name\n",
+    "        self.birthdate = birthdate\n",
+    "\n",
+    "class Book:\n",
+    "    def __init__(self, title, author, genre):\n",
+    "        self.title = title\n",
+    "        self.author = author\n",
+    "        self.genre = genre\n",
+    "\n",
+    "    def get_info(self):\n",
+    "        return f\"Title: {self.title}\\nAuthor: {self.author.name}\\nGenre: {self.genre}\"\n",
+    "\n",
+    "# Create an Author\n",
+    "author = Author(\"J.K. Rowling\", \"July 31, 1965\")\n",
+    "\n",
+    "# Create a Book with the Author as composition\n",
+    "harry_potter = Book(\"Harry Potter and the Philosopher's Stone\", author, \"Fantasy\")\n",
+    "\n",
+    "# Get information about the book\n",
+    "print(harry_potter.get_info())\n"
    ]
   },
   {
