Solved all questions

--- a/DayWiseMaterial/Assignments/DSA/04th_Nov_Recurssion_Relation_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/DSA/04th_Nov_Recurssion_Relation_Assignment.ipynb
@@ -127,7 +127,7 @@
     "* T(n) = 2T(n/2) + c\n",
     "\n",
     "Then:\n",
-    "* T(n/4) = 2T(n/4) + c\n",
+    "* T(n/2) = 2T(n/4) + c\n",
     "* T(n) = 2*2T(n/2^2) + c + c = 2^2T(n/2^2) + 2c\n",
     "\n",
     "Similarily:\n",
@@ -165,22 +165,26 @@
     "* T(n) = T(n/2) + c\n",
     "\n",
     "Then:\n",
-    "* T(n-1) = T((n-1)/2) + c\n",
-    "* T(n) = T((n-1)/2) + c + c = T((n-1)/2) + 2c\n",
+    "* T(n/2) = T(n/4) + c\n",
+    "* T(n) = T(n/2^2) + c + c = T(n/2^2) + 2c\n",
     "\n",
     "Similarily:\n",
     "\n",
-    "* T(n) = T((n-2)/2) + 3c\n",
+    "* T(n) = T(n/2^3) + 3c\n",
     "\n",
     "and\n",
     "\n",
-    "* T(n) = T((n-k)/2) + (k+1)c\n",
+    "* T(n) = T(n/2^k) + kc\n",
     "\n",
-    "For k = n\n",
+    "for iterations to make it T(1) i.e n/2^k = 1\n",
+    "n = 2^k\n",
+    "=> k = log(n)\n",
     "\n",
-    "T(n) = T(0) + (n+1)c = T(0) + nc + c\n",
+    "T(n) = T(1) + clog(n)\n",
     "\n",
-    "#### Time complexity of O(n)"
+    "T(n) = 1 + clog(n)\n",
+    "\n",
+    "#### Time complexity of O(log(n))"
    ]
   },
   {
@@ -272,7 +276,7 @@
     "for k - log(n) --- sum of iterations is below\n",
     "n + n + n ------ log(n) times\n",
     "\n",
-    "#### Hence Time complexity is O(n*log(n))"
+    "#### Hence Time complexity is O(n*log(n)) i.e O(nlog(n))"
    ]
   },
   {
