--- a/DayWiseMaterial/Assignments/DSA/04_Nov_Recurssion_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/DSA/04_Nov_Recurssion_Assignment.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q.2 Given two strings word1 and word2, return the minimum number of operations required to convert word1\n",
+    "### Q.2 Given two strings word1 and word2, return the minimum number of operations required to convert word1\n",
     "to word2.\n",
     "```\n",
     "Example 1:\n",
