--- a/DayWiseMaterial/Assignments/DSA/04_Nov_Recurssion_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/DSA/04_Nov_Recurssion_Assignment.ipynb
@@ -166,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q.5 Given a number n. Print if it is an armstrong number or not.An armstrong number is a number if the sum\n",
+    "### Q.5 Given a number n. Print if it is an armstrong number or not.An armstrong number is a number if the sum\n",
     "of every digit in that number raised to the power of total digits in that number is equal to the number.\n",
     "```\n",
     "Example : 153 = 1^3 + 5^3 + 3^3 = 1 + 125 + 27 = 153 hence 153 is an armstrong number. (Easy)\n",
