--- a/DayWiseMaterial/Assignments/DSA/Jan_19th_Recurssion_TimeComplexity_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/DSA/Jan_19th_Recurssion_TimeComplexity_Assignment.ipynb
@@ -230,10 +230,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We use the concept of divide and conquer\n",
+    "# We check either if the sum is available in n-1 array or  array from 0 to n (means sum - arr[n-1] in n-1)\n",
+    "\n",
+    "def is_subset_sum(arr, n, sum):\n",
+    "    if sum == 0:\n",
+    "        return True\n",
+    "    if n == 0:\n",
+    "        return False\n",
+    "    \n",
+    "    ## if last element is greator than required sum then we check for array 0 to n -1 \n",
+    "    if arr[n-1] > sum:\n",
+    "        return is_subset_sum(arr, n-1, sum)\n",
+    "    \n",
+    "    ## Check for sum or (sum - arr[n]) in array 0 to n - 1\n",
+    "    return is_subset_sum(arr, n-1, sum) or is_subset_sum(arr, n-1, sum - arr[n - 1])\n",
+    "\n",
+    "def subset_sum(arr, sum):\n",
+    "    return is_subset_sum(arr, len(arr), sum)\n",
+    "\n",
+    "subset_sum([3, 34, 4, 12, 5, 2], 9)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -247,10 +279,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def word_break(str_input, dict_of_words, n, left = 0, right = 0):\n",
+    "    if right > (n - 1):\n",
+    "        return left == right\n",
+    "\n",
+    "    if str_input[left:right+1] in dict_of_words:\n",
+    "        return word_break(str_input, dict_of_words, n, right+1, right+1)\n",
+    "    else:\n",
+    "        return word_break(str_input, dict_of_words, n, left, right+1)\n",
+    "\n",
+    "word_break( \"leetcode\" , [ \"leet\" , \"code\" ], 8)"
+   ]
   },
   {
    "cell_type": "markdown",
