Solved all the questions

--- a/DayWiseMaterial/Assignments/DSA/Jan_19th_Recurssion_TimeComplexity_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/DSA/Jan_19th_Recurssion_TimeComplexity_Assignment.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,9 +329,99 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "def can_place_queen(board, n, row, col):\n",
+    "\n",
+    "    # Check if the queen is already placed in the same row\n",
+    "    for c in range(col):\n",
+    "        if board[row][c] == 'Q':\n",
+    "            return False\n",
+    "    \n",
+    "    # Check for the diagonal cells above the current row\n",
+    "    for i, j in zip(range(row, -1, -1), range(col, -1, -1)):\n",
+    "        if board[i][j] == 'Q':\n",
+    "            return False\n",
+    "        \n",
+    "    # Check for the diagonal cells in previous columns\n",
+    "    for i, i in zip(range(row, n, 1), range(col, -1, -1)):\n",
+    "        if board[i][j] == 'Q':\n",
+    "            return False\n",
+    "        \n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def place_queens(board, n, col_index=0):\n",
+    "\n",
+    "    if col_index >= n:\n",
+    "        return True\n",
+    "    \n",
+    "    for row in range(n):\n",
+    "\n",
+    "        if can_place_queen(board, n, row, col_index):\n",
+    "\n",
+    "            board[row][col_index] = 'Q'\n",
+    "\n",
+    "            if place_queens(board, n, col_index+1) == True:\n",
+    "                return True\n",
+    "            \n",
+    "            board[row][col_index] = '-'\n",
+    "        \n",
+    "    \n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def n_queens(n):\n",
+    "    board = []\n",
+    "    # Create an empty board of nxn size\n",
+    "    for i in range(n):\n",
+    "        board.append([])\n",
+    "        for j in range(n):\n",
+    "            board[i].append('-')\n",
+    "\n",
+    "    if place_queens(board, n):\n",
+    "        return board\n",
+    "    else:\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['-', '-', 'Q', '-'],\n",
+       " ['-', 'Q', '-', '-'],\n",
+       " ['-', '-', '-', 'Q'],\n",
+       " ['Q', '-', '-', '-']]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_queens(4)"
+   ]
   }
  ],
  "metadata": {
