--- a/DayWiseMaterial/Assignments/Toolkits/Jan_28th_Numpy_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/Toolkits/Jan_28th_Numpy_Assignment.ipynb
@@ -66,6 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Ans.*\n",
     "#### Size is 12\n",
     "#### Shape is (3,4)\n",
     "#### Dimension is 2\n",
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
